--- a/backend_comisiones/pubspec.yaml
+++ b/backend_comisiones/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
   dart_frog_cors: ^2.0.0
   dart_jsonwebtoken: ^3.3.1
   dotenv: ^4.2.0
+  http: ^1.5.0
   mysql_client: ^0.0.27
-
+  
 dev_dependencies:
   dart_frog_lint: ^0.1.0
   mocktail: ^1.0.3
