--- a/frontend_comisiones_v2/pubspec.yaml
+++ b/frontend_comisiones_v2/pubspec.yaml
@@ -1,32 +1,35 @@
 name: frontend_comisiones_v2
 description: "A new Flutter project."
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none' 
 
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.9.2
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
-  http: ^1.5.0
+  http: ^1.2.1 # (O la versión que tengas)
   flutter_riverpod: ^2.5.1
-  shared_preferences: ^2.5.3
-  intl: ^0.20.2
+  shared_preferences: ^2.2.3
+  intl: ^0.19.0
+
+  # --- ¡AÑADIR ESTOS DOS PAQUETES! ---
+  printing: ^5.11.1
+  pdf: ^3.10.8
+  # --- FIN ---
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^5.0.0
+  flutter_lints: ^3.0.0
 
 
 flutter:
-
   uses-material-design: true
-
   assets:
     - assets/
