--- a/backend_comisiones/pubspec.yaml
+++ b/backend_comisiones/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dotenv: ^4.2.0
   http: ^1.5.0
   mysql_client: ^0.0.27
+  intl: ^0.19.0
   
 dev_dependencies:
   dart_frog_lint: ^0.1.0
