--- a/frontend_comisiones_v2/pubspec.yaml
+++ b/frontend_comisiones_v2/pubspec.yaml
@@ -16,11 +16,11 @@ dependencies:
   flutter_riverpod: ^2.5.1
   shared_preferences: ^2.2.3
   intl: ^0.19.0
-
-  # --- ¡AÑADIR ESTOS DOS PAQUETES! ---
   printing: ^5.11.1
   pdf: ^3.10.8
-  # --- FIN ---
+  file_picker: ^8.0.6
+  cross_file: ^0.3.4+1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -33,3 +33,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
+    - assets/plantilla_importacion.csv
